fix side nav tool bar

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     </figure>
 
     <div class="navbar-toggle">
-      <div class="my-work">My Work</div>
+      <div class="my-work ">My Work</div>
     </div> <!-- .navbar-toggle / hamburger menu -->
 
   <nav class="fp-nav-wrapper flex">
@@ -96,7 +96,7 @@
       <div class="container center-content">
         <div class="landing-header">
           <h1>Excited to build whatever comes next!</h1>
-          <h3>Digital designer — Developer.</h3>
+          <h3>Digital designer — Font end Developer</h3>
         </div>
         <div id="salmon-fish">
           <a href="#about-me"><img src="img/salmon-split.png"></a>
@@ -104,7 +104,7 @@
       </div>
 
       <div class="case-study-type">
-        <a href="#about-me"><span>case studies</span><a/>
+        <a href="#about-me"><span>about me</span><a/>
       </div>
 
       <div class="pulse">
@@ -133,7 +133,9 @@
             <p class="fadetext-about">I love to use design and technology to create things that are meaningful and creative. I have a passion and interest for UI/UX design, technology, the internet, chatbots, photography and film. I understand that the best results come from collaboration and experimentation.</p>
           </div>
         </div>
-
+        <div class="case-study-type">
+          <a href="#prototype.html"><span>case studies</span><a/>
+        </div>
         <div class="pulse">
         <a href="#prototype">
           <svg class="pulse-button" height="65" viewBox="0 0 65 65" width="65" xmlns="http://www.w3.org/2000/svg">
@@ -162,7 +164,7 @@
             <a href="prototype.html"><button class="main-btn-reverse fadetext-prototype">Case study<i class="fa fa-arrow-circle-right" aria-hidden="true"></i></button></a>
           </article>
           <div class="prototype-mockup fadetext-prototype">
-            <img id="proto-test" src="img/prototype-test.png" alt="">
+            <img id="proto-test" src="img/prototype-flat.svg" alt="">
           </div>
         </div>
       </div>
@@ -180,7 +182,7 @@
     </div> <!-- .section user-interface -->
 
     <div class="section chatbot">
-      <div class="c-background-icon">
+      <div class="c-background-icon" id="chatbot-background-icon">
         <img src="img/chatbot_icon.svg" alt="prototype and design initial">
       </div>
       <div class="chatbot-container flex justify-center">
