--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
       </div>
 
       <div class="down-arrow">
-        <img src="img/down-arrow-reverse.svg" alt="">
+        <img src="img/down-arrow.svg" alt="">
       </div>
 
     </div> <!-- .main-landing-page -->
@@ -262,7 +262,6 @@
   <script src="js/vendor/scrolloverflow.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/pixi.js/4.0.0/pixi.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/fullPage.js/2.8.6/jquery.fullPage.min.js"></script>
-  <script src="js/vendor/fullpage.fadingEffect.min.js"></script>
   <script src="js/dist/main.js"></script>
 
 
