change user interface illustration

--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
             <a href="user-interface.html"><button class="main-btn-reverse fadetext-ui">Case study<i class="fa fa-arrow-circle-right" aria-hidden="true"></i></button></a>
           </article>
           <div class="ui-mockup fadetext-ui">
-            <img id="proto-test" src="img/ui-desktop.png" alt="wireframe of laptop">
+            <img id="proto-test" src="img/ui-desktop.svg" alt="wireframe of laptop">
           </div>
         </div>
       </div>
