complete prototype section illustrsation

--- a/index.html
+++ b/index.html
@@ -160,11 +160,10 @@
           <article>
             <h1 class="fadetext-prototype">Prototyping</h1>
             <p class="fadetext-prototype">This case study is based on a project I worked on in 2014 and reworked 2016 as a personal project and prototyping exercise.</p>
-            <!-- <a href="prototype.html" class="btn-2">View Case Study</a> -->
             <a href="prototype.html"><button class="main-btn-reverse fadetext-prototype">Case study<i class="fa fa-arrow-circle-right" aria-hidden="true"></i></button></a>
           </article>
           <div class="prototype-mockup fadetext-prototype">
-            <img id="proto-test" src="img/prototype-flat.svg" alt="">
+            <img id="proto-test" src="img/prototype-wire-mockup.svg" alt="">
           </div>
         </div>
       </div>
