add userface and chatbot illustratios

--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
         <div class="wrapper-container flex justify-center align-center space-between">
           <article>
             <h1 class="fadetext-prototype">Prototyping</h1>
-            <p class="fadetext-prototype">This case study is based on a project I worked on in 2014 and reworked 2016 as a personal project and prototyping exercise.</p>
+            <p class="fadetext-prototype">This case study is based on a project I worked on in 2014 and reworked in 2016 as a personal project and prototyping exercise.</p>
             <a href="prototype.html"><button class="main-btn-reverse fadetext-prototype">Case study<i class="fa fa-arrow-circle-right" aria-hidden="true"></i></button></a>
           </article>
           <div class="prototype-mockup fadetext-prototype">
@@ -217,7 +217,7 @@
         <div class="wrapper-container flex justify-center align-center space-between">
           <article>
             <h1 class="fadetext-ui">User Interface</h1>
-            <p class="fadetext-ui">The following UI case study is based on a group project I worked on during my time at Enspiral Dev Academy in 2016. Each group had 6 days to complete and present the finished project.</p>
+            <p class="fadetext-ui">The following UI case study is based on a 6 day group project I worked on during my time at Enspiral Dev Academy in 2016.</p>
             <a href="user-interface.html"><button class="main-btn-reverse fadetext-ui">Case study<i class="fa fa-arrow-circle-right" aria-hidden="true"></i></button></a>
           </article>
           <div class="ui-mockup fadetext-ui">
