clean img directory, fix social footer

--- a/chatbot.html
+++ b/chatbot.html
@@ -78,12 +78,12 @@
     <section class="final-chatbot flex">
         <div class="final-chatbot-container flex-container is-column">
           <div class="side-graphic">
-            <img src="img/chatbot/bluey-fullbody.svg" alt="melting globe">
+            <img src="./img/chatbot-desktop-mockup.svg" alt="melting globe">
           </div>
 
           <article class="intro-text flex is-column justify-center">
             <h1>How much do you know?</h1>
-            <p>"To help educate people on the causes and effects of climate change, I'm conducting a short survey to find how much people actually know about the issue" </p>
+            <p>"To help educate people on the causes and effects of climate change, I'm conducting a short survey to find how much people actually know" </p>
             <div class="messenger-button">
               <a href="http://m.me/199396557202394" target="_blank"><h4>Take survey on messenger</h4></a>
             </div>
