--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
         <div class="wrapper-container flex justify-center align-center space-between">
           <article>
             <h1 class="fadetext-prototype">Prototyping</h1>
-            <p class="fadetext-prototype">This case study is based on a project I worked on in 2014 and reworked in 2016 as a personal project and prototyping exercise.</p>
+            <p class="fadetext-prototype">This case study is based on a project I worked on in 2014. I decided to redo it 2016 as a personal project and prototyping exercise.</p>
             <a href="prototype.html"><button class="main-btn-reverse fadetext-prototype">Case study<i class="fa fa-arrow-circle-right" aria-hidden="true"></i></button></a>
           </article>
           <div class="prototype-mockup fadetext-prototype">
@@ -192,7 +192,7 @@
             <a href="chatbot.html"><button class="main-btn-reverse chat-btn fadetext-chatbot">Case study<i class="fa fa-arrow-circle-right" aria-hidden="true"></i></button></a>
           </article>
           <div class="chatbot-mockup fadetext-chatbot">
-            <img src="img/chatbot-desktop-mockup.svg" alt="">
+            <img src="./img/chatbot-desktop-mockup.svg" alt="">
           </div>
         </div>
       </div>
@@ -246,7 +246,7 @@
         <div class="wrapper-container flex justify-center align-center space-between">
           <article>
             <h1 class="fadetext-design">Graphic Design</h1>
-            <p class="fadetext-design">Graphic designer and photographer with 7+ years of experience developing, designing and producing a variety of print and digital collateral including marketing material, branding, annual reports, user interface, E-newsletters, and posters.</p>
+            <p class="fadetext-design">Graphic designer and photographer with 7+ years of experience developing, designing and producing a variety of print and digital collateral including marketing material, branding, illustrations, photography, annual reports, user interface, E-newsletters, and posters.</p>
             <a href="graphic-design.html"><button class="main-btn-reverse fadetext-design">View Portfolio<i class="fa fa-arrow-circle-right" aria-hidden="true"></i></button></a>
           </article>
         </div>
