--- a/chatbot.html
+++ b/chatbot.html
@@ -101,7 +101,7 @@
           <p>Get in touch</p>
           <p>Rath Prak</p>
           <p>+64 (0)21 126 0568</p>
-          <p>digital designer | front end developer</p>
+          <p>digital designer / front end developer</p>
           <p>Wellington, New Zealand</p>
         </div>
         <div class="social-icons">
