clean up images folder

--- a/prototype.html
+++ b/prototype.html
@@ -186,7 +186,7 @@
           <p>Combining Sketch App and Photoshop, the wireframes were then transformed into hi-fidelity mockups which included color, typography, graphics and other visual elements. Utilising Sketch’s artboard feature, I rapidly <span>iterated and experimented </span> with different design variations and layouts.</p>
         </article>
         <div class="sketch-screenshot">
-          <img src="img/skechapp-screen.png" alt="screenshot of design interation">
+          <img src="img/skechapp-screen.jpg" alt="screenshot of design interation">
           <h5>(Sketch App made interation quick and easy)</h5>
         </div>
       </div>
