--- a/user-interface.html
+++ b/user-interface.html
@@ -144,11 +144,11 @@
         </article>
         <article>
           <div class="tandem-screen-img">
-            <img src="img/tandem-landing.png" alt="screen shot of tandem landing page">
+            <img src="img/tandem-landing.jpg" alt="screen shot of tandem landing page">
             <h6>(Tandem landing page)</h6>
           </div>
           <div class="tandem-screen-img">
-            <img src="img/tandem-sign-in.png" alt="screen shot of tandem landing page">
+            <img src="img/tandem-sign-in.jpg" alt="screen shot of tandem landing page">
             <h6>(Tandem sign-in page)</h6>
           </div>
         </article>
