--- a/index.html
+++ b/index.html
@@ -163,7 +163,8 @@
             <a href="prototype.html"><button class="main-btn-reverse fadetext-prototype">Case study<i class="fa fa-arrow-circle-right" aria-hidden="true"></i></button></a>
           </article>
           <div class="prototype-mockup fadetext-prototype">
-            <img id="proto-test" src="img/prototype-wire-mockup.svg" alt="">
+            <!-- <img id="proto-test" src="img/prototype-wire-mockup.svg" alt=""> -->
+            <div id="bodymovin-prototype"></div>
           </div>
         </div>
       </div>
@@ -259,10 +260,10 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.18.5/TweenMax.min.js"></script>
   <script src="js/lib/salmonAnimation.js"></script>
   <script src="js/vendor/scrolloverflow.js"></script>
+  <script src="js/vendor/bodymovin.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/pixi.js/4.0.0/pixi.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/fullPage.js/2.8.6/jquery.fullPage.min.js"></script>
   <script src="js/dist/main.js"></script>
-
 
   <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
   <script>
