--- a/index.html
+++ b/index.html
@@ -163,7 +163,6 @@
             <a href="prototype.html"><button class="main-btn-reverse fadetext-prototype">Case study<i class="fa fa-arrow-circle-right" aria-hidden="true"></i></button></a>
           </article>
           <div class="prototype-mockup fadetext-prototype">
-            <!-- <img id="proto-test" src="img/prototype-wire-mockup.svg" alt=""> -->
             <div id="bodymovin-prototype"></div>
           </div>
         </div>
@@ -263,7 +262,7 @@
   <script src="js/vendor/bodymovin.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/pixi.js/4.0.0/pixi.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/fullPage.js/2.8.6/jquery.fullPage.min.js"></script>
-  <script src="js/dist/main.js"></script>
+  <script src="js/dist/bundle.js"></script>
 
   <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
   <script>
