add animated down line arrow

--- a/index.html
+++ b/index.html
@@ -119,9 +119,11 @@
         </a>
       </div>
 
-      <div class="down-arrow">
-        <img src="img/down-arrow.svg" alt="">
+      <div class="down-arrow-container">
+        <div class="down-arrow"></div>
       </div>
+
+    </div>
 
     </div> <!-- .main-landing-page -->
 
@@ -147,7 +149,8 @@
           </svg>
         </a>
       </div>
-
+      <div class="down-arrow-container">
+        <div class="down-arrow"></div>
       </div>
     </div> <!-- .section .about-me  -->
 
