add new portfolio piece for graphic design section

--- a/graphic-design.html
+++ b/graphic-design.html
@@ -115,6 +115,12 @@
       </article>
 
       <article class="portfolio-wrap">
+        <div class="col-1"><img src="img/graphic-design/portfolio-gazley.jpg" alt="newspaper advert"></div>
+        <div class="col-1"><img src="img/graphic-design/portfolio-gazley02.jpg" alt="newspaper advert"></div>
+        <p class="caption">(Gazley / Newspaper and print advertisement)</p>
+      </article>
+
+      <article class="portfolio-wrap">
         <div class="col-1"><img src="img/graphic-design/portfolio-nix00.jpg" alt="Phoenix poster"></div>
         <div class="col-1"><img src="img/graphic-design/portfolio-nix01.png" alt="Phoenix Brochure"></div>
         <div class="col-1"><img src="img/graphic-design/portfolio-nix02.png" alt="Phoenix Brochure"></div>
