change graphic design section on homepage

--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
         <div class="wrapper-container flex justify-center align-center space-between">
           <article>
             <h1 class="fadetext-design">Graphic Design</h1>
-            <p class="fadetext-design">Graphic designer and photographer with 7+ years developing and producing a variety of print and digital material from concept to finished product. I have experience with branding, marketing communications, illustration, photography, promotional material, project management, user interface and web design.</p>
+            <p class="fadetext-design">Designer with 7+ years developing and producing a variety of print and digital material from concept to finished product. I have experience with branding, marketing communications, illustration, photography, promotional material, project management, user interface and web design.</p>
             <a href="graphic-design.html"><button class="main-btn-reverse fadetext-design">View Portfolio<i class="fa fa-arrow-circle-right" aria-hidden="true"></i></button></a>
           </article>
         </div>
