update graphic design section

--- a/graphic-design.html
+++ b/graphic-design.html
@@ -66,8 +66,8 @@
         </div>
 
         <div class="nav-about-text">
-          <h2>I'm a <span>Digital designer</span> and <span>Front-end developer</span> based in Wellington.</h2>
-          <p>My interests include interaction design, UX/UI, prototyping and front-end development.</p>
+          <h2>I'm a <span>designer</span> and <span>front-end developer</span> based in Wellington.</h2>
+          <p>My interests include UX/UI design, interaction design, graphic design, chatbots and front-end web development.</p>
         </div>
 
         <div class="nav-back-button">
@@ -101,6 +101,13 @@
       <article class="portfolio-wrap">
         <div class="col-1"><img src="img/graphic-design/portfolio-motel.jpg" alt="screen motel association"></div>
         <p class="caption">(Motel Association of New Zealand / User interface design)</p>
+      </article>
+
+      <article class="portfolio-wrap">
+        <div class="col-1"><img src="img/graphic-design/portfolio-adshell.jpg" alt="adshell image"></div>
+        <div class="col-2"><img src="img/graphic-design/portfolio-sls01.jpg" alt="SLS brand guide"></div>
+        <div class="col-2"><img src="img/graphic-design/portfolio-sls02.jpg" alt="SLS Brand Guide"></div>
+        <p class="caption" >(Surf Life Saving NZ / Adshell and brand guide)</p>
       </article>
 
       <article class="portfolio-wrap">
@@ -162,7 +169,7 @@
       </div>
       <div>
         <a class='backtop-btn'><img src="img/arrow-circle.svg"></i></a>
-        <p class="copy-right">&copy; Copyright 2016 Rayfinn Digital.</p>
+        <p class="copy-right">&copy; Copyright 2017 Rayfinn Digital.</p>
       </div>
     </div>
   </footer>
