--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
       </div>
 
       <div class="nav-about-text">
-        <h2>I'm a <span>Digital designer</span> and <span>Front-end developer</span> based in Wellington.</h2>
-        <p>My interests include UI/UX design, technology, the internet and chatbots.</p>
+        <h2>I'm a <span>designer</span> and <span>front-end developer</span> based in Wellington.</h2>
+        <p>My interests include UX/UI design, interaction design, graphic design, chatbots and front-end web development.</p>
       </div>
 
       <div class="nav-back-button">
@@ -75,7 +75,7 @@
   </nav> <!-- .fp-nav-wrapper -->
 
   <div class="location-caption">
-    <p class="title-caption"><span>digital designer</span> and <span>front end developer</p>
+    <p class="title-caption"><span>Designer</span> and <span>front end developer</p>
   </div>
   <div class="social-main">
     <ul>
@@ -96,7 +96,7 @@
       <div class="container center-content">
         <div class="landing-header">
           <h1>Excited to build whatever comes next!</h1>
-          <h3>Digital designer — Font end Developer</h3>
+          <h3>Designer — Font end Developer</h3>
         </div>
         <div id="salmon-fish">
           <a href="#about-me"><img src="img/salmon-split.png"></a>
@@ -132,7 +132,7 @@
           <div class="about">
             <h1 class="fadetext-about">A few things about myself</h1>
             <h2 class="fadetext-about">I'm a designer and front-end developer based in New Zealand.</h2>
-            <p class="fadetext-about">I love to use design and technology to create things that are meaningful and creative. I have a passion and interest for UI/UX design, technology, the internet, chatbots, photography and film. I understand that the best results come from collaboration and experimentation.</p>
+            <p class="fadetext-about">I have a passion for both design and technology. I spend my spare time scouring the internet for inspiring and fresh designs and ways on how to build them. Visual design, interaction and UX design, technology, portrait photography, sports and films are some of the things that excite me.</p>
           </div>
         </div>
         <div class="case-study-type">
