--- a/user-interface.html
+++ b/user-interface.html
@@ -65,9 +65,10 @@
         </div>
 
         <div class="nav-about-text">
-          <h2>I'm a <span>Digital designer</span> and <span>Front-end developer</span> based in Wellington.</h2>
-          <p>My interests include UI/UX design, technology, the internet and chatbots.</p>
+          <h2>I'm a <span>designer</span> and <span>front-end developer</span> based in Wellington.</h2>
+          <p>My interests include UX/UI design, interaction design, graphic design, chatbots and front-end web development.</p>
         </div>
+
 
         <div class="nav-back-button">
           <img src="img/close-icon.svg">
