--- a/prototype.html
+++ b/prototype.html
@@ -66,8 +66,8 @@
         </div>
 
         <div class="nav-about-text">
-          <h2>I'm a <span>Digital designer</span> and <span>Front-end developer</span> based in Wellington.</h2>
-          <p>My interests include UI/UX design, technology, the internet and chatbots.</p>
+          <h2>I'm a <span>designer</span> and <span>front-end developer</span> based in Wellington.</h2>
+          <p>My interests include UX/UI design, interaction design, graphic design, chatbots and front-end web development.</p>
         </div>
 
         <div class="nav-back-button">
