tidyup index.html

--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
           </svg>
         </a>
       </div>
-    </div> <!-- .section user-interface -->
+    </div> <!-- .section prototyping-->
 
     <div class="section chatbot">
       <div class="c-background-icon" id="chatbot-background-icon">
