update user interface section

--- a/user-interface.html
+++ b/user-interface.html
@@ -155,6 +155,27 @@
         </article>
       </div>
     </section> <!-- .scope -->
+    
+    <section class="te-awe tandem-final-design flex align-center">
+      <div class="final-design-container flex-container is-column">
+        <article class="final-text">
+          <h1>Te Awe Maori Business Network</h1>
+          <p>Te Awe Wellington Māori Business Network is a non-profit organisation and was established in 1996. It is the oldest Māori Business Network operating in New Zealand.</p>
+        <p>Te Awe wanted to update their existing website so it would appeal more existing and new members. I was responsible for the redesign and front-end development of the site. For the UI/UX I focused on a modular approach which would allow the client to easily expand and update the site by reusing existing modules. I also used Zurb Foundation for my CSS framework to ensure the final website was completely responsive across all platforms. <a href="http://www.teawe.maori.nz/" target="_blank">Click here to visit Te Awe.</a></p>
+
+        </article>
+        <article>
+          <div class="tandem-screen-img">
+            <img src="img/teawe-landing.jpg" alt="screen shot of tandem landing page">
+            <h6>(Twe Awe home page)</h6>
+          </div>
+          <div class="tandem-screen-img">
+            <img src="img/teawe-screen.jpg" alt="screen shot of tandem landing page">
+            <h6>(Twe Awe Young Champions)</h6>
+          </div>
+        </article>
+      </div>
+    </section> <!-- .scope -->
 
 
     <footer class="footer flex-container justify-center">
