--- a/graphic-design.html
+++ b/graphic-design.html
@@ -52,7 +52,7 @@
             <li data-menuanchor="home" class="active menu-item"><a href="./#home">home</a></li>
             <li data-menuanchor="prototype" class="menu-item"><a href="prototype.html">prototyping</a></li>
             <li data-menuanchor="chatbot" class="menu-item"><a href="chatbot.html">chatbot</a></li>
-            <li data-menuanchor="user-interface" class="menu-item"><a href="user-interface.html">user interface</a></li>
+            <li data-menuanchor="user-interface" class="menu-item"><a href="user-interface.html">UI & Web development</a></li>
             <li data-menuanchor="photography" class="menu-item"><a href="graphic-design.html">design</a></li>
           </ul>
 
@@ -89,7 +89,7 @@
         <h1>Graphic Design</h1>
         <h2>Welcome to my graphic design portfolio</h2>
         <p class="design-body-text">
-        I am passionate about all things design. I love combining typography, photography, and colors to communicate ideas and stimulate feelings. I also have an interest in portrait and commercial photography. Online photographic portfolio <a target="_blank" href="http://www.capturegram.co.nz">capturegram</a>
+        I am passionate about all things design. I love combining typography, photography, and colors to communicate ideas and stimulate feelings. I also have an interest in portrait and commercial photography.
         </p>
       </article>
     </div>
