update text and copy

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
       </div>
 
       <div class="nav-about-text">
-        <h2>I'm a <span>designer</span> and <span>front-end developer</span> based in Wellington.</h2>
+        <h2>I'm a <span>designer</span> and <span>front-end web developer</span> based in Wellington.</h2>
         <p>My interests include UX/UI design, interaction design, graphic design, chatbots and front-end web development.</p>
       </div>
 
@@ -96,7 +96,7 @@
       <div class="container center-content">
         <div class="landing-header">
           <h1>Excited to build whatever comes next!</h1>
-          <h3>Designer — Font end Developer</h3>
+          <h3>Digital designer — Font-end Developer</h3>
         </div>
         <div id="salmon-fish">
           <a href="#about-me"><img src="img/salmon-split.png"></a>
@@ -131,8 +131,8 @@
        <div class="wrapper-container flex is-column justify-center">
           <div class="about">
             <h1 class="fadetext-about">A few things about myself</h1>
-            <h2 class="fadetext-about">I'm a designer and front-end developer based in New Zealand.</h2>
-            <p class="fadetext-about">I have a passion for both design and technology. I spend my spare time scouring the internet for inspiring and fresh designs and ways on how to build them. Visual design, interaction and UX design, technology, portrait photography, sports and films are some of the things that excite me.</p>
+            <h2 class="fadetext-about">I'm a digital designer and front-end web developer <br>based in New Zealand.</h2>
+            <p class="fadetext-about">I have a passion for both design and technology. I spend my spare time scouring the internet for inspiring and fresh ideas and ways on how to bring them to life. UI/UX design, chatbots, technology, portrait photography, sports, and films are some of the things that excite me.</p>
           </div>
         </div>
         <div class="case-study-type">
@@ -191,7 +191,7 @@
         <div class="wrapper-container flex justify-center align-center space-between">
           <article>
             <h1 class="fadetext-chatbot">Chatbot</h1>
-            <p class="fadetext-chatbot">A personal UX/UI project which explores conversational interface and chatbots for research and feedback.</p>
+            <p class="fadetext-chatbot">A personal UX/UI project which explores conversational interface and chatbots as an alternative to conventional user interfaces.</p>
             <a href="chatbot.html"><button class="main-btn-reverse chat-btn fadetext-chatbot">Case study<i class="fa fa-arrow-circle-right" aria-hidden="true"></i></button></a>
           </article>
           <div class="chatbot-mockup fadetext-chatbot">
@@ -220,7 +220,7 @@
         <div class="wrapper-container flex justify-center align-center space-between">
           <article>
             <h1 class="fadetext-ui">User Interface</h1>
-            <p class="fadetext-ui">The following UI case study is based on a 6 day group project I worked on during my time at Enspiral Dev Academy in 2016.</p>
+            <p class="fadetext-ui">Examples of user interface design and front-end web development.</p>
             <a href="user-interface.html"><button class="main-btn-reverse fadetext-ui">Case study<i class="fa fa-arrow-circle-right" aria-hidden="true"></i></button></a>
           </article>
           <div class="ui-mockup fadetext-ui">
@@ -249,7 +249,7 @@
         <div class="wrapper-container flex justify-center align-center space-between">
           <article>
             <h1 class="fadetext-design">Graphic Design</h1>
-            <p class="fadetext-design">Designer with 7+ years developing and producing a variety of print and digital material from concept to finished product. I have experience with branding, marketing communications, illustration, photography, promotional material, project management, user interface and web design.</p>
+            <p class="fadetext-design">I have been working as a designer for many years developing and producing a variety of print and digital material from concept to finished product. I have experience with branding, marketing communications, illustration, photography, promotional material, project management and web design.</p>
             <a href="graphic-design.html"><button class="main-btn-reverse fadetext-design">View Portfolio<i class="fa fa-arrow-circle-right" aria-hidden="true"></i></button></a>
           </article>
         </div>
