--- a/user-interface.html
+++ b/user-interface.html
@@ -126,7 +126,7 @@
           <h1>Our approach and process</h1>
           <p>We started with planning, developed user stories and figured out what technologies were best. We then moved to building wireframes for the site. <span>Creating wireframes, user stories, and sitemaps from the start were important</span> because it ensured that every team member was on the same page which made delegating roles and tasks straightforward.
           </p>
-          <p>We used InDesign to produce the wireframes and site maps which were bases for my UI design. Since we had less than a week to complete the app, we skipped the prototype stage and decided to move straight into development.</p>
+          <p>We used InDesign to produce the wireframes and site maps which were the bases for my UI designs. Since we had less than a week to complete the app, we skipped the prototype stage and decided to move straight into development.</p>
         </article>
 
         <div class="tandem-sitemap">
@@ -161,7 +161,7 @@
         <article class="final-text">
           <h1>Te Awe Maori Business Network</h1>
           <p>Te Awe Wellington Māori Business Network is a non-profit organisation and was established in 1996. It is the oldest Māori Business Network operating in New Zealand.</p>
-        <p>Te Awe wanted to update their existing website so it would appeal more existing and new members. I was responsible for the redesign and front-end development of the site. For the UI/UX I focused on a modular approach which would allow the client to easily expand and update the site by reusing existing modules. I also used Zurb Foundation for my CSS framework to ensure the final website was completely responsive across all platforms. <a href="http://www.teawe.maori.nz/" target="_blank">Click here to visit Te Awe.</a></p>
+        <p>Te Awe wanted a new design of their existing website that would appeal more existing and new members. I was responsible for the redesign and front-end development of the site. For the UI/UX I focused on a modular base approach which would allow the client to easily expand and update the site by reusing existing modules. I also used Zurb Foundation for my CSS framework to ensure the final website was completely responsive across all digital platforms. <a href="http://www.teawe.maori.nz/" target="_blank">Click here to visit Te Awe.</a></p>
 
         </article>
         <article>
