update user interface

--- a/user-interface.html
+++ b/user-interface.html
@@ -155,7 +155,7 @@
         </article>
       </div>
     </section> <!-- .scope -->
-    
+
     <section class="te-awe tandem-final-design flex align-center">
       <div class="final-design-container flex-container is-column">
         <article class="final-text">
@@ -172,6 +172,26 @@
           <div class="tandem-screen-img">
             <img src="img/teawe-screen.jpg" alt="screen shot of tandem landing page">
             <h6>(Twe Awe Young Champions)</h6>
+          </div>
+        </article>
+      </div>
+    </section> <!-- .scope -->
+
+    <section class="quadrant tandem-final-design flex align-center">
+      <div class="final-design-container flex-container is-column">
+        <article class="final-text">
+          <h1>Quandrant Solutions</h1>
+          <p>Quandrant Solutions is a transitional / change consultancy specifically structured to help companies and organisations to achieve key outcomes which are vital to their business.</p>
+          <p>I was responsible for the redesign and front-end development of the site.</p>
+        </article>
+        <article>
+          <div class="tandem-screen-img">
+            <img src="img/quad_01.jpg" alt="screen shot of tandem landing page">
+            <h6>(QSOL - Landing)</h6>
+          </div>
+          <div class="tandem-screen-img">
+            <img src="img/quad_02.jpg" alt="screen shot of tandem landing page">
+            <h6>(QSOL - Business Support)</h6>
           </div>
         </article>
       </div>
